# katy_site

./: Makefile  manage.py  pyproject.toml
coaching/: admin.py  models.py  views.py
coaching/migrations/: 0001_initial.py  0002_post_post_body.py
katysite/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
katysite/migrations/: 0001_initial.py
katysite/templates/: index.html
numero/: forms.py  models.py  serializer.py  views.py
numero/calculator/: matrix_pertceva.py
numero/config/: db.py
numero/migrations/: 0001_initial.py  0002_numeromenu.py
numero/templates/: base.html  calc.html  index.html  matrix.html  numero.html  same_day.html
