[tool.poetry]
name = "katy_site"
version = "0.1.0"
description = "website for Katy - coaching, psy.statistic, change management"
authors = ["alexandertarakanov <alex.artoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
psycopg2 = "^2.9.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
